trunk/Archive2/ce/81b88c9108d696/output
main.cpp: In instantiation of 'S<T, N>::S(std::initializer_list<_Tp>) [with T = int; int N = 5]':
main.cpp:15:33:   required from here
main.cpp:8:40: error: no matching function for call to 'std::array<int, 5ul>::array(std::initializer_list<int>&)'
     S(std::initializer_list<T> l) : v(l) {
                                        ^
main.cpp:8:40: note: candidates are:
In file included from main.cpp:2:0:
/usr/include/c++/4.8/array:81:12: note: std::array<int, 5ul>::array()
     struct array
            ^
/usr/include/c++/4.8/array:81:12: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/array:81:12: note: constexpr std::array<int, 5ul>::array(const std::array<int, 5ul>&)
/usr/include/c++/4.8/array:81:12: note:   no known conversion for argument 1 from 'std::initializer_list<int>' to 'const std::array<int, 5ul>&'
/usr/include/c++/4.8/array:81:12: note: constexpr std::array<int, 5ul>::array(std::array<int, 5ul>&&)
/usr/include/c++/4.8/array:81:12: note:   no known conversion for argument 1 from 'std::initializer_list<int>' to 'std::array<int, 5ul>&&'
